# cpp-arg-parse

./: .gitignore  meson.build
app/: meson.build
app/arg_parse_tester/: arg_parse_tester.cpp  meson.build
lib/arg_parse/: meson.build
lib/arg_parse/include/arg_parse/: arg_parse.h  argument.h  argument_parser.h  available_argument.h  minimal_parser.h  parsed_argument.h
lib/arg_parse/src/: arg_parse.cpp  argument.cpp  argument_parser.cpp  minimal_parser.cpp
lib/arg_parse/test/: meson.build  tdd.cpp  test_arg_parse.cpp  test_argument.cpp  test_argument_parser.cpp  test_minimal_parser.cpp  test_utils.h
lib/common/include/common/: api.h
scripts/meson/: builder.py  builder_windows.py
